--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,10 @@ repositories {
     mavenCentral()
 }
 
+dependencies{
+    compile "org.slf4j:slf4j-api:1.7.21"
+    compile "org.slf4j:slf4j-log4j12:1.7.21"
+}
+
 sourceCompatibility = 1.8
 
