--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ repositories {
     mavenCentral()
 }
 
-dependencies{
+dependencies {
     compile "org.slf4j:slf4j-api:1.7.21"
     compile "org.slf4j:slf4j-log4j12:1.7.21"
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.+"
 }
 
 sourceCompatibility = 1.8
